<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E7F7F7"
    android:padding="16dp"
    tools:context=".Informasi">

    <TextView
    android:textColor="@android:color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
        android:textAlignment="center"
    android:text="@string/informasi"/>
    <TextView
    android:layout_marginTop="50dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    android:text="@string/owner"/>

    <TextView
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    android:text="@string/version"/>
    <TextView
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    android:text="@string/email_profil"/>

</LinearLayout>