<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#E7F7F7"
    android:layout_gravity="center"
    tools:context=".MainActivity">

 <ImageView
     android:layout_width="200dp"
     android:layout_height="200dp"
     android:layout_gravity="center"
     android:src="@drawable/l"
     android:layout_marginBottom="30dp"/>

 <LinearLayout
     android:layout_marginTop="5dp"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:gravity="center"
     android:orientation="horizontal">

     <Button
     android:id="@+id/lihatbtn"
     android:layout_width="250dp"
     android:background="@drawable/stylebutton1"
         android:drawableLeft="@drawable/aa"
     android:layout_height="60dp"
     android:textSize="20sp"
     android:textColor="#ffffff"
     android:text="@string/mkn"/>
     </LinearLayout>

     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:gravity="center"
     android:orientation="horizontal">

     <Button
     android:id="@+id/inputbtn"
     android:layout_width="250dp"
     android:background="@drawable/stylebutton2"
         android:drawableLeft="@drawable/ic_plus"
     android:layout_height="60dp"
     android:textSize="20sp"
     android:textColor="#ffffff"
     android:text="@string/tbhdt"/>

     </LinearLayout>

     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:gravity="center"
     android:orientation="horizontal">

     <Button
     android:id="@+id/infobtn"
     android:layout_width="250dp"
     android:background="@drawable/stylebutton3"
         android:drawableLeft="@drawable/ic_info"
     android:layout_height="60dp"
     android:textSize="20sp"
     android:textColor="#ffffff"
     android:text="@string/infor"/>
     </LinearLayout>

</LinearLayout>
